[tool.poetry]
name = "algorithms-and-data-structures"
version = "1.0.0"
description = "Playing with algorithms and data structures in Python."
authors = ["Julian Boronat <boronat.j.e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"