[project]
name = "algorithms-and-data-structures"
version = "0.0.1"
description = "Playing with algorithms and data structures in Python."
authors = [{name = "Julian Boronat", email = "boronat.j.e@gmail.com"}]
requires-python = ">=3.13,<3.14"
dependencies = [
    ">=3.13,<3.14"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
